added floating point examples

--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -361,3 +361,15 @@ url = {http://www.cs.kent.ac.uk/pubs/2000/958},
    isbn = "0-201-41667-0",
    year = 1991
 }
+
+@techreport{citeulike:3760678,
+    abstract = {{This Standard defines the ECMAScript scripting language. ECMAScript is an object-oriented programming language for performing computations and manipulating computational objects within a host environment. ECMAScript as defined here is not intended to be computationally self-sufficient; indeed, there are no provisions in this specification for input of external data or output of computed results. Instead, it is expected that the computational environment of an ECMAScript program will provide not only the objects and other facilities described in this specification but also certain environment-specific host objects, whose description and behaviour are beyond the scope of this specification except to indicate that they may provide certain properties that can be accessed and certain functions that can be called from an ECMAScript program. ECMAScript was originally designed to be a Web scripting language, providing a mechanism to enliven Web pages in browsers and to perform server computation as part of a Web-based client-server architecture. ECMAScript can provide core scripting capabilities for a variety of host environments, and therefore the core scripting language is specified in this document apart from any particular host environment.}},
+    citeulike-article-id = {3760678},
+    citeulike-linkout-0 = {http://www.ecma-international.org/publications/standards/Ecma-262.htm},
+    keywords = {html, javascript, slicefactory, standard},
+    organization = {ECMA},
+    posted-at = {2008-12-09 16:25:44},
+    priority = {2},
+    title = {{ECMAScript Language Specification (Standard ECMA-262)}},
+    url = {http://www.ecma-international.org/publications/standards/Ecma-262.htm}
+}
