--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -195,10 +195,10 @@ url="http://dx.doi.org/10.1007/BFb0014054"
     publisher = {http://dev.stephendiehl.com/fun/},
 }
 
-@misc{algoW,
-    author = {Martin Grabmuller},
-    title = {Algorithm W},
-    publisher = {https://github.com/mgrabmueller/AlgorithmW/blob/master/AlgorithmW.lhs},
+@MISC{algoW,
+    author = {Martin Grabmüller},
+    title = {Algorithm W Step by Step},
+    year = {2006}
 }
 
 @misc{transformers,
@@ -362,14 +362,56 @@ url = {http://www.cs.kent.ac.uk/pubs/2000/958},
    year = 1991
 }
 
-@techreport{citeulike:3760678,
-    abstract = {{This Standard defines the ECMAScript scripting language. ECMAScript is an object-oriented programming language for performing computations and manipulating computational objects within a host environment. ECMAScript as defined here is not intended to be computationally self-sufficient; indeed, there are no provisions in this specification for input of external data or output of computed results. Instead, it is expected that the computational environment of an ECMAScript program will provide not only the objects and other facilities described in this specification but also certain environment-specific host objects, whose description and behaviour are beyond the scope of this specification except to indicate that they may provide certain properties that can be accessed and certain functions that can be called from an ECMAScript program. ECMAScript was originally designed to be a Web scripting language, providing a mechanism to enliven Web pages in browsers and to perform server computation as part of a Web-based client-server architecture. ECMAScript can provide core scripting capabilities for a variety of host environments, and therefore the core scripting language is specified in this document apart from any particular host environment.}},
-    citeulike-article-id = {3760678},
-    citeulike-linkout-0 = {http://www.ecma-international.org/publications/standards/Ecma-262.htm},
-    keywords = {html, javascript, slicefactory, standard},
-    organization = {ECMA},
-    posted-at = {2008-12-09 16:25:44},
+@techreport{citeulike:4001400,
+    abstract = {{This standard specifies interchange and arithmetic formats and methods for binary and decimal floating-point arithmetic in computer programming environments. This standard specifies exception conditions and their default handling. An implementation of a floating-point system conforming to this standard may be realized entirely in software, entirely in hardware, or in any combination of software and hardware. For operations specified in the normative part of this standard, numerical results and exceptions are uniquely determined by the values of the input data, sequence of operations, and destination formats, all under user control.}},
+    address = {3 Park Avenue, New York, NY 10016-5997, USA},
+    booktitle = {IEEE Std 754-2008},
+    citeulike-article-id = {4001400},
+    citeulike-linkout-0 = {http://dx.doi.org/10.1109/ieeestd.2008.4610935},
+    citeulike-linkout-1 = {http://ieeexplore.ieee.org/xpls/abs\_all.jsp?arnumber=4610935},
+    day = {29},
+    doi = {10.1109/ieeestd.2008.4610935},
+    institution = {Microprocessor Standards Committee of the IEEE Computer Society},
+    isbn = {978-0-7381-5752-8},
+    journal = {IEEE Std 754-2008},
+    keywords = {ch3, gpgpu},
+    month = aug,
+    organization = {Microprocessor Standards Committee of the IEEE Computer Society},
+    pages = {1--70},
+    posted-at = {2009-08-01 03:34:26},
     priority = {2},
-    title = {{ECMAScript Language Specification (Standard ECMA-262)}},
-    url = {http://www.ecma-international.org/publications/standards/Ecma-262.htm}
+    publisher = {The Institute of Electrical and Electronics Engineers, Inc.},
+    title = {{IEEE Standard for Floating-Point Arithmetic}},
+    url = {http://dx.doi.org/10.1109/ieeestd.2008.4610935},
+    year = {2008}
+}
+
+@article{Loh:2010:TID:1883634.1883637,
+ author = {L\"{o}h, Andres and McBride, Conor and Swierstra, Wouter},
+ title = {A Tutorial Implementation of a Dependently Typed Lambda Calculus},
+ journal = {Fundam. Inf.},
+ issue_date = {April 2010},
+ volume = {102},
+ number = {2},
+ month = apr,
+ year = {2010},
+ issn = {0169-2968},
+ pages = {177--207},
+ numpages = {31},
+ url = {http://dl.acm.org/citation.cfm?id=1883634.1883637},
+ acmid = {1883637},
+ publisher = {IOS Press},
+ address = {Amsterdam, The Netherlands, The Netherlands},
+} 
+
+@article{cardelli1984basic,
+    author = {Cardelli, L.},
+    citeulike-article-id = {9340062},
+    journal = {Science of Computer Programming},
+    posted-at = {2011-05-26 12:53:32},
+    priority = {2},
+    publisher = {Citeseer},
+    title = {{Basic polymorphic typechecking}},
+    volume = {8},
+    year = {1984}
 }
