--- a/docs/syntax.tex
+++ b/docs/syntax.tex
@@ -113,6 +113,6 @@ Tuples are created with \{  and \}
 \end{minted}
 
 \subsection{Indenting}
-MicroML does not (yet) have an indentation sensitive parser. Declarations are bests written on one
+MicroML does not (yet) have an indentation sensitive parser. Declarations are best written on one
 line in a file, though the parser is usually sophisticated enough to disambiguate multiline function
 declarations.
